--- a/Permaisuri.Tools.NPOIExtentionsTests/Permaisuri.Tools.NPOIExtentionsTests.csproj
+++ b/Permaisuri.Tools.NPOIExtentionsTests/Permaisuri.Tools.NPOIExtentionsTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{0117BF40-C47F-46B6-8A81-6031B0E55369}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Permaisuri.ToolsTests</RootNamespace>
-    <AssemblyName>Permaisuri.ToolsTests</AssemblyName>
+    <RootNamespace>Permaisuri.Tools.NPOIExtentionsTests</RootNamespace>
+    <AssemblyName>Permaisuri.Tools.NPOIExtentionsTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,6 +38,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
   </ItemGroup>
@@ -66,6 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pictures\1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OutPutDir\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
